--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -74,7 +74,7 @@
 
                     </a>
 
-                    <a href="/desenvolvedores/sobreNos" class="nav__link">
+                    <a href="/usuario/sobreNos" class="nav__link">
                         <i class='bx bx-compass nav__icon'></i>
                         <span class="nav__name">Sobre nós</span>
                     </a>
