--- a/public/css/meusSimulados.css
+++ b/public/css/meusSimulados.css
@@ -108,3 +108,32 @@ form button{
     border: 1px solid #888;
     width: 80%;
 }
+
+.pagination {
+    list-style-type: none;
+    display: flex;
+    justify-content: center;
+    padding: 20px 0;
+}
+
+.pagination li {
+    display: block;
+    margin: 0 5px;
+}
+
+.pagination li a {
+    display: block;
+    padding: 5px 10px;
+    color: #333;
+    text-decoration: none;
+    border-radius: 5px;
+}
+
+.pagination li.active a {
+    background-color: #0056b3;
+    color: white;
+}
+
+.pagination li a:hover {
+    background-color: #007bff;
+}
